<resources>
    <string name="app_name">ClassLib</string>
    <string name="logged_in_user_string">Now you are a logged in user of this app!</string>
    <string name="account_login_string">Account login</string>
    <string name="email_hint_string">Email</string>
    <string name="password_hint_string">Password</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="register_new_account_string">Register new account</string>
    <string name="register_success_string">Registration successful!</string>
    <string name="register_failed_string">Registration failed! Please try again later</string>
    <string name="add_string">Add Book</string>
    <string name="search_string">Search Library</string>
    <string name="checkout_string">Checkout Book</string>
    <string name="title_string">Title</string>
    <string name="author_string">Author</string>
    <string name="lexile_string">Lexile Level</string>
    <string name="age_string">Age</string>
    <string name="category_string">Category</string>
    <string name="copies_string">Number of Copies</string>
    <string name="barcode_string">Scan Barcode</string>
    <string name="report_string">Reports</string>
    <string name="hint_student_id">Student\'s ID number</string>
    <string name="hint_title">Title of the book</string>
    <string name="student_id">Student ID</string>
    <string name="available_string">Available</string>
    <string name="category_prompt">Choose Category</string>

    <string name="title_card_string">Title:</string>
    <string name="author_card_string">Author:</string>
    <string name="category_card_string">Category:</string>
    <string name="lexile_card_string">Lexile Level:</string>
    <string name="age_card_string">Age:</string>
    <string name="ncopies_card_string">Available Copies:</string>
    <string name="co_card_string">Checked Out By:</string>

    <string name="isbn_string">ISBN</string>
    <string name="lookup_string">Lookup ISBN</string>
    <string name="search_isbn_string">Search ISBN</string>
    <string-array name="Categories">
        <item>Animals, Bugs &amp; Pets</item>
        <item>Art, Creativity &amp; Music</item>
        <item>General Literature</item>
        <item>Hobbies, Sports &amp; Outdoors</item>
        <item>Science Fiction &amp; Fantasy</item>
        <item>Real Life</item>
        <item>Science &amp; Technology</item>
        <item>Mystery &amp; Suspense</item>
        <item>Reference</item>
    </string-array>

    <string-array name="Sorting">
        <item>Title</item>
        <item>Author</item>
        <item>Age</item>
        <item>Category</item>
        <item>Lexile Level</item>
        <item>Copies Available</item>
    </string-array>

    <string-array name="Sorting2">
        <item>Author</item>
        <item>Age</item>
        <item>Category</item>
        <item>Lexile Level</item>
        <item>Copies Available</item>
        <item>Title</item>
    </string-array>
</resources>
