<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".LookupActivity">

    <TextView
        android:id="@+id/isbn_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isbn_string" />

    <EditText
        android:id="@+id/book_isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:minHeight="48dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/scan_button"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:text="@string/barcode_string"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/lookup_button"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:text="@string/lookup_string"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>